# price_prediction

./: .gitignore  README.md
Chest_Disease_Detection/: requirements.txt
Doclify/: README.md  main.py  pyproject.toml
Doclify/.github/workflows/: publish.yml
Doclify/doclify/components/: config.py  init.py  models.py  run.py  update.py
Doclify/doclify/config/: constants.py
Doclify/doclify/pipelines/: supervisor.py
Doclify/doclify/prompts/: batch_summary.txt  final_summary.txt
Doclify/doclify/schema/: schema.py
Doclify/doclify/utils/: extract.py  file_utils.py  llm.py  logger.py  readme.py  scanner.py  utils.py
House_Price_predection/: app.py
Spam_Email_Detection/: requirements.txt
examples/: 01_chat_completions.py  02_statelessness.py  03_context_window_tokens.py  04_tokenization.py  05_autoregressive_generation.py  06_streaming.py
notes/: 01_chat_completions.md  02_statelessness.md  03_context_window_tokens.md  04_tokenization.md  05_autoregressive_generation.md  06_streaming.md
price_prediction/: README.md  app.py
price_prediction/Artifacts/: Model.pkl  Preprocessor.pkl
price_prediction/Notebook_Experiments/: Airbnb_Price_Prediction.ipynb
price_prediction/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
price_prediction/catboost_info/learn/: events.out.tfevents
price_prediction/src/Airbnb/: exception.py
price_prediction/src/Airbnb/components/: Data_ingestion.py  Data_transformation.py
price_prediction/src/Airbnb/pipelines/: Prediction_Pipeline.py
price_prediction/templates/: index.html
